# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml
gendiff/: __init__.py  cli_parser.py  diff_generator.py  parser.py
gendiff/formatters/: format_selector.py  json.py  plain.py  stylish.py
gendiff/scripts/: cli.py  gendiff.py
tests/fixtures/: flat1_parsed.txt  result_nested_diff_json.json
tests/fixtures/nested/: nested1.json  nested1.yaml
tests/fixtures/result/: result_flat_json.json  result_flat_json.txt  result_nested_json.json  result_nested_json.txt  result_nested_plain.txt  result_nested_stylish.txt
tests/gendiff/: test_diff_generator.py  test_parser.py
