[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Command-line app to find a difference between two JSON/YAML files"
authors = ["toro <timofey89rus@gmail.com>"]
readme = "README.md"
packages = [
    {include = "gendiff"},
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
    "Environment :: Console"
	"Natural Language :: English",
	"Programming Language :: Python :: 3.12",
    "File Formats :: JSON",
    "File Formats :: JSON :: JSON Schema"
]

repository = "https://github.com/toro89rus/python-project-50"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.cli:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


